// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages ticketRepresentation should render correctly when the fare type is a multi operator ticket 1`] = `
<TwoThirdsLayout
  description="Ticket Representation selection page of the Create Fares Data Service"
  errors={Array []}
  title="Ticket Representation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/ticketRepresentation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="ticket-representation-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="ticket-representation-page-heading"
          >
            Select a type of multi-operator ticket
          </h1>
        </legend>
        <FormElementWrapper
          errorClass="govuk-radios--errors"
          errorId="geo-zone"
          errors={Array []}
        >
          <RadioButtons
            inputName="ticketType"
            options={
              Array [
                Object {
                  "hint": "Travel within a geographical zone",
                  "label": "A ticket within a geographical zone",
                  "value": "geoZone",
                },
                Object {
                  "hint": "Travel on specific service or set of services",
                  "label": "A ticket for a set of services",
                  "value": "multipleServices",
                },
                Object {
                  "hint": "Unlimited travel between two fixed points in both directions",
                  "label": "Point to Point",
                  "value": "pointToPointPeriod",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages ticketRepresentation should render correctly when the fare type is a period ticket 1`] = `
<TwoThirdsLayout
  description="Ticket Representation selection page of the Create Fares Data Service"
  errors={Array []}
  title="Ticket Representation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/ticketRepresentation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="ticket-representation-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="ticket-representation-page-heading"
          >
            Select a type of period ticket
          </h1>
        </legend>
        <FormElementWrapper
          errorClass="govuk-radios--errors"
          errorId="geo-zone"
          errors={Array []}
        >
          <RadioButtons
            inputName="ticketType"
            options={
              Array [
                Object {
                  "hint": "Unlimited travel within a geographical zone",
                  "label": "A ticket within a geographical zone",
                  "value": "geoZone",
                },
                Object {
                  "hint": "Unlimited travel on specific service or set of services",
                  "label": "A ticket for a set of services",
                  "value": "multipleServices",
                },
                Object {
                  "hint": "Unlimited travel between two fixed points in both directions",
                  "label": "Point to Point",
                  "value": "pointToPointPeriod",
                },
                Object {
                  "hint": "Unlimited travel within a geographic zone and certain additional services outside that zone",
                  "label": "Hybrid period ticket",
                  "value": "hybrid",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages ticketRepresentation should render error messaging when errors are passed 1`] = `
<TwoThirdsLayout
  description="Ticket Representation selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a type of ticket representation",
        "id": "geo-zone",
      },
    ]
  }
  title="Ticket Representation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/ticketRepresentation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose a type of ticket representation",
            "id": "geo-zone",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="ticket-representation-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="ticket-representation-page-heading"
          >
            Select a type of period ticket
          </h1>
        </legend>
        <FormElementWrapper
          errorClass="govuk-radios--errors"
          errorId="geo-zone"
          errors={
            Array [
              Object {
                "errorMessage": "Choose a type of ticket representation",
                "id": "geo-zone",
              },
            ]
          }
        >
          <RadioButtons
            inputName="ticketType"
            options={
              Array [
                Object {
                  "hint": "Unlimited travel within a geographical zone",
                  "label": "A ticket within a geographical zone",
                  "value": "geoZone",
                },
                Object {
                  "hint": "Unlimited travel on specific service or set of services",
                  "label": "A ticket for a set of services",
                  "value": "multipleServices",
                },
                Object {
                  "hint": "Unlimited travel between two fixed points in both directions",
                  "label": "Point to Point",
                  "value": "pointToPointPeriod",
                },
                Object {
                  "hint": "Unlimited travel within a geographic zone and certain additional services outside that zone",
                  "label": "Hybrid period ticket",
                  "value": "hybrid",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
